Fixed navigation bar height bug
- Fixed navigation bar height bug. Initially too small
- Push to GitHub Pages

--- a/src/app/components/navigation-bar/navigation-bar.component.css
+++ b/src/app/components/navigation-bar/navigation-bar.component.css
@@ -1,7 +1,7 @@
 .navbar {
   position: fixed;
   width: 100%;
-  height: 3rem;
+  height: 3.8rem;
   background-color: var(--light-blue);
   z-index: 1;
 }
